--- a/style.css
+++ b/style.css
@@ -13,41 +13,50 @@ body {
 
 header {
     display: flex;
+    flex-direction: row;
+    width: 100%;
     margin: 0;
     padding: 0;
-    border: 2px red solid;
+    border: 1px red solid;
 }
 
-.title {
-    position: absolute;
-    top: 0;
-    left: 0;
+.title > h1 {
+    width: 8rem;
+    height: 3rem;
     margin: 0;
     padding: 0;
-    border: 4px blue solid;
+    border: 1px blue solid;
+    align-self: flex-start;
+}
+
+nav {
+    display: flex;
+    flex-direction: column;
+    position: ;
+    left: 20vmin;
+    border: 1px yellow solid;
 }
 
 .menu-svg {
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: 0;
-    right: 0;
+    width: 2.5rem;
+    height: 2.5rem;
     margin: 0;
     padding: 0;
-    border: 4px purple solid;
-}
-
-.nav-item {
-    text-decoration: none;
-    color:aliceblue
+    border: 1px purple solid;
 }
 
 .nav-list {
     list-style: none;
-    display: none;
-    position: absolute;
-    right: 0;
-    margin: 10px 20px;
+    display: block;
+    position: sticky;
+    margin: 0;
+    padding: 0;
+    border: 4px green solid;
+}
+
+.nav-item {
+    text-decoration: none;
+    color: inherit;
+    border: 1px orange solid;
 }
 
