--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* font rem ---- margin padding  width em */
+/* font rem ---- margin padding width em */
 
 :root {
     --color-bg: hsl(0, 0%, 10%); /* hsl(0, 0%, 18%); */
@@ -41,7 +41,6 @@ header {
     font-weight: bold;
     padding: 0;
     margin: 0;
-    height: 2em;
 }
 
 .menu-svg {
@@ -97,6 +96,10 @@ nav{
     transition: 300ms ease-in-out;
 }
 
+.nav-opened {
+    transform: translateX(0);
+}
+
 /* INFO */
 
 .info-wrapper {
@@ -104,7 +107,6 @@ nav{
     justify-content: flex-start;
     align-items: center;
     height: 12vh;
-    margin-bottom: 1.5em;
 }
 
 /* SECTIONS */
@@ -190,4 +192,18 @@ nav{
 
 .mail-button:focus::before {
     content: "📧\00a0";
+}
+
+.pdf-cv {
+    display: flex;
+    font-size: 1.1rem;
+    font-weight: bold;
+    justify-content: flex-start;
+    margin: 1.2em 0;
+    text-decoration: underline;
+}
+
+.pdf-cv:hover {
+    color: hsl(219, 90%, 48%);
+    /* text-decoration-color: hsl(219, 100%, 60%); */
 }
