--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ header {
     cursor: pointer;
 }
 
-nav{
+nav {
     position: fixed;
     top: 0;
     right: 0;
@@ -77,7 +77,7 @@ nav{
     transition: 300ms ease-in-out;
 }
 
-.nav-container {    
+.nav-container {
     list-style: none;
     margin-top: 7.5em;
     padding: 0;
@@ -192,18 +192,153 @@ nav{
 
 .mail-button:focus::before {
     content: "📧\00a0";
-}
+} /* not needed? */
 
-.pdf-cv {
+.resume {
     display: flex;
     font-size: 1.1rem;
     font-weight: bold;
     justify-content: flex-start;
     margin: 1.2em 0;
+}
+
+.resume-pdf {
     text-decoration: underline;
 }
 
-.pdf-cv:hover {
+.resume:hover {
     color: hsl(219, 90%, 48%);
-    /* text-decoration-color: hsl(219, 100%, 60%); */
+}
+
+.resume:hover::before {
+    content: "📄\00a0"; /* TODO: update to svg */
+}
+
+.resume:active {
+    color: hsl(212, 90%, 50%);
+}
+
+.mail-button:focus::before {
+    content: "📧\00a0";
+} /* not needed? */
+
+/* Breakpoints */
+/* TABLET+ */
+@media only screen and (min-width: 680px) {
+    body {
+        margin: 1.5em 5em;
+    }
+
+    .work-container {
+        width: 35vw;
+    }
+}
+
+/* PC+ */
+@media only screen and (min-width: 920px) {
+    
+    body {
+        margin: 1.5em 5em; /* TODO: more margin on both sides*/
+    }
+
+    .title {
+        font-size: 2.4rem;
+        font-weight: bold;
+        padding: 0;
+        margin: 0;
+    }
+    
+    .menu-svg {
+        display: none;
+    }
+
+    nav {
+        transform: translateX(0);
+        position: unset;
+        display: block;
+        width: auto;
+        height: auto;
+        background: none;
+    }
+    
+    .close-svg {
+        display: none;
+    }
+
+    .nav-container {
+        display: flex;
+        margin: 0;
+    }
+    
+    .nav-item {
+        font-size: 1.32rem;
+        padding: 0.6em 1em;
+    }
+
+    .nav-item:hover{
+        background: none;
+        color: inherit;
+        transition: none;
+        text-decoration: underline;
+    }
+
+    /* INFO */
+
+    .info-wrapper {
+        height: 30vh;
+        width: 50vw;
+        margin-bottom: 2em;
+        font-size: 1.1rem;
+    }
+
+    /* SECTIONS */
+
+    .section-name {
+        font-size: 2rem;
+        margin-bottom: 0.75em;
+    }
+
+    /* WORK */
+
+    .work-group {
+        margin-bottom: 3.3em;
+    }
+
+    .work-container {
+        margin: 1.5em 0 2em 0;
+    }
+
+    .work-name {
+        font-size: 1.5rem;
+        margin-top: 1em;
+    }
+    
+    .work-description {
+        font-size: 1.15rem;
+        margin: 0.5em 0 1em 0;
+    }
+    
+    .work-link {
+        font-size: 1.15rem;
+    }
+
+    /* CONTACT */
+
+    .mail-button{
+        font-size: 1.24rem;
+        margin: 2em 0 1.4em 0;
+        height: 1.7em;
+        align-items: center; /* ? */
+    }
+
+    .mail-button:active {
+        margin-bottom: 1.6em;
+        width: 13.1em;
+        height: 1.3em;
+    }
+
+    .resume {
+        font-size: 1.15rem;
+    }
+    
 }
