--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* font rem ---- margin padding width em */
-
 :root {
     --color-bg: hsl(0, 0%, 10%); /* hsl(0, 0%, 18%); */
     --color-txt: hsl(0, 0%, 90%); /* hsl(0, 0%, 82%); */
@@ -7,8 +5,12 @@
     --color-nav-hover: hsl(0, 0%, 34%);
     --color-txt-hover: hsl(0, 0%, 94%);
     --color-btn: hsl(219, 89%, 13%); /* not sure */
+    /* unused btn colors */
     --color-btn-hover: hsl(219, 89%, 20%);
     --color-btn-active: hsl(219, 89%, 20%);
+    /* TODO: light mode toggle */
+    --color-light-bg: white;
+    --color-light-txt: #2E2E2E;
     scroll-behavior: smooth;
 }
 
@@ -135,7 +137,7 @@ nav {
 .work-shot {
     width: 100%;
     aspect-ratio: 16/9; /* placeholder, bc shots'll be 16:9 anyway */
-    outline: 1px  white solid; /* remove later */
+    outline: 1px  white solid; /* REMOVE later */
 }
 
 .work-name {
@@ -238,7 +240,7 @@ nav {
 @media only screen and (min-width: 920px) {
     
     body {
-        margin: 1.5em 5em; /* TODO: more margin on both sides*/
+        margin: 1.5em 5em;
     }
 
     .title {
