--- a/style.css
+++ b/style.css
@@ -1,366 +1,363 @@
 :root {
-    --color-bg: hsl(0, 0%, 10%); /* hsl(0, 0%, 18%); */
-    --color-txt: hsl(0, 0%, 90%); /* hsl(0, 0%, 82%); */
-    --color-nav-bg: hsl(0, 0%, 18%);
-    --color-nav-hover: hsl(0, 0%, 34%);
-    --color-txt-hover: hsl(0, 0%, 94%);
-    --color-btn: hsl(219, 89%, 13%); /* not sure */
-    /* unused btn colors */
-    --color-btn-hover: hsl(219, 89%, 20%);
-    --color-btn-active: hsl(219, 89%, 20%);
-    /* TODO: light mode toggle */
-    --color-light-bg: white;
-    --color-light-txt: #2E2E2E;
-    scroll-behavior: smooth;
+  --color-bg: hsl(0, 0%, 10%); /* hsl(0, 0%, 18%); */
+  --color-txt: hsl(0, 0%, 90%); /* hsl(0, 0%, 82%); */
+  --color-nav-bg: hsl(0, 0%, 18%);
+  --color-nav-hover: hsl(0, 0%, 34%);
+  --color-txt-hover: hsl(0, 0%, 94%);
+  --color-btn: hsl(219, 89%, 13%); /* not sure */
+  /* unused btn colors */
+  --color-btn-hover: hsl(219, 89%, 20%);
+  --color-btn-active: hsl(219, 89%, 20%);
+  /* TODO: light mode toggle */
+  --color-light-bg: white;
+  --color-light-txt: #2e2e2e;
+  scroll-behavior: smooth;
 }
 
 body {
-    background-color: var(--color-bg, black);
-    color: var(--color-txt, white);
-    font-family: Poppins, sans-serif;
-    margin: 1.5em
+  background-color: var(--color-bg, black);
+  color: var(--color-txt, white);
+  font-family: Poppins, sans-serif;
+  margin: 1.5em;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 /* HEADER */
 
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 .title {
-    font-size: 2rem;
-    font-weight: bold;
-    padding: 0;
-    margin: 0;
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 0;
+  margin: 0;
 }
 
 .menu-svg {
-    width: 2em;
-    margin: 0;
-    padding: 0;
-    fill: var(--color-txt, white);
-    cursor: pointer;
+  width: 2em;
+  margin: 0;
+  padding: 0;
+  fill: var(--color-txt, white);
+  cursor: pointer;
 }
 
 nav {
-    position: fixed;
-    top: 0;
-    right: 0;
-    height: 100vh;
-    width: 50%;
-    background-color: var(--color-nav-bg, dimgray);
-    z-index: 999;
-    transform: translateX(100%);
-    transition: transform 500ms ease-in-out;
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 50%;
+  background-color: var(--color-nav-bg, dimgray);
+  z-index: 999;
+  transform: translateX(100%);
+  transition: transform 500ms ease-in-out;
 }
 
 .close-svg {
-    float: right;
-    width: 2em;
-    margin: 2em;
-    padding: 0;
-    fill: var(--color-txt);
-    cursor: pointer;
+  float: right;
+  width: 2em;
+  margin: 2em;
+  padding: 0;
+  fill: var(--color-txt);
+  cursor: pointer;
 }
 
 .close-svg:hover {
-    fill: hsl(0, 0%, 94%);
-    transition: 300ms ease-in-out;
+  fill: hsl(0, 0%, 94%);
+  transition: 300ms ease-in-out;
 }
 
 .nav-container {
-    list-style: none;
-    margin-top: 7.5em;
-    padding: 0;
+  list-style: none;
+  margin-top: 7.5em;
+  padding: 0;
 }
 
 .nav-item {
-    display: block;
-    font-size: 1.3rem;
-    padding: 0.75em 0 0.75em 0;
-    text-align: center;
+  display: block;
+  font-size: 1.3rem;
+  padding: 0.75em 0 0.75em 0;
+  text-align: center;
 }
 
-.nav-item:hover{
-    background-color: var(--color-nav-hover, silver);
-    color: hsl(0, 0%, 94%);
-    transition: 300ms ease-in-out;
+.nav-item:hover {
+  background-color: var(--color-nav-hover, silver);
+  color: hsl(0, 0%, 94%);
+  transition: 300ms ease-in-out;
 }
 
 .nav-opened {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
 /* INFO */
 
 .info-wrapper {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: 12vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 14vh;
+  margin-bottom: 1.5rem;
 }
 
 /* SECTIONS */
 
 .section-name {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 0.75em;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 0.75em;
 }
 
 /* WORK */
 
 .work-group {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-items: center;
-    margin-bottom: 1.5em;
-    padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  margin-bottom: 1.5em;
+  padding: 0;
 }
 
 .work-container {
-    width: 40vw;
-    margin-bottom: 1em;
+  width: 40vw;
+  margin-bottom: 1em;
 }
 
 .work-shot {
-    width: 100%;
-    aspect-ratio: 16/9; /* placeholder, bc shots'll be 16:9 anyway */
-    outline: 1px  white solid; /* REMOVE later */
+  width: 100%;
+  aspect-ratio: 16/9; /* placeholder, bc shots'll be 16:9 anyway */
+  outline: 1px white solid; /* REMOVE later */
 }
 
 .work-name {
-    font-size: 1.1rem;
-    font-weight: bold;
-    margin-top: 0.5em;
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-top: 0.5em;
 }
 
 .work-description {
-    font-size: 0.9rem;
-    margin: 0.2em 0 0.5em 0;
+  font-size: 0.9rem;
+  margin: 0.2em 0 0.5em 0;
 }
 
 .work-link {
-    font-size: 0.9rem;
-    font-weight: bold;
-    text-decoration: underline;
+  font-size: 0.9rem;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 /* CONTACT */
 
-.mail-button{
-    display: flex;
-    font-size: 1.1rem;
-    margin: 0 auto;
-    padding: 1.1em;
-    width: 13.5em;
-    height: 1.5em;
-    justify-content: center;
-    align-items: center;
-    background-color: hsl(219, 90%, 30%); /* var(--color-btn, darkslateblue) */
-    border: 0;
-    border-radius: 4px;
+.mail-button {
+  display: flex;
+  font-size: 1.1rem;
+  margin: 0 auto;
+  padding: 1.1em;
+  width: 13.5em;
+  height: 1.5em;
+  justify-content: center;
+  align-items: center;
+  background-color: hsl(219, 90%, 30%); /* var(--color-btn, darkslateblue) */
+  border: 0;
+  border-radius: 4px;
 }
 
 .mail-button:hover {
-    background-color: hsl(219, 90%, 25%);
+  background-color: hsl(219, 90%, 25%);
 }
 
 .mail-button:hover::before {
-    content: "📧\00a0";
+  content: "📧\00a0";
 }
 
 .mail-button:active {
-    margin-bottom: 0.5em;
-    width: 13em;
-    height: 1.2em;
-    border: 2px hsl(219, 90%, 48%) solid;
+  margin-bottom: 0.5em;
+  width: 13em;
+  height: 1.2em;
+  border: 2px hsl(219, 90%, 48%) solid;
 }
 
 .mail-button:focus {
-    background-color: hsl(219, 90%, 33%);
+  background-color: hsl(219, 90%, 33%);
 }
 
 .mail-button:focus::before {
-    content: "📧\00a0";
+  content: "📧\00a0";
 } /* not needed? */
 
 .resume {
-    display: flex;
-    font-size: 1.1rem;
-    font-weight: bold;
-    justify-content: flex-start;
-    margin: 1.2em 0;
+  display: flex;
+  font-size: 1.1rem;
+  font-weight: bold;
+  justify-content: flex-start;
+  margin: 1.2em 0;
 }
 
 .resume-pdf {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .resume:hover {
-    color: hsl(219, 90%, 48%);
+  color: hsl(219, 90%, 48%);
 }
 
 .resume:hover::before {
-    content: "📄\00a0"; /* TODO: update to svg */
+  content: "📄\00a0"; /* TODO: update to svg */
 }
 
 .resume:active {
-    color: hsl(212, 90%, 50%);
+  color: hsl(212, 90%, 50%);
 }
 
 .mail-button:focus::before {
-    content: "📧\00a0";
+  content: "📧\00a0";
 } /* not needed? */
 
 /* Breakpoints */
 /* TABLET+ */
 @media only screen and (min-width: 680px) {
-    body {
-        margin: 1.5em 5em;
-    }
+  body {
+    margin: 1.5em 5em;
+  }
 
-    .work-container {
-        width: 35vw;
-    }
+  .work-container {
+    width: 35vw;
+  }
 }
 
 /* PC+ */
 @media only screen and (min-width: 920px) {
-    
-    body {
-        margin: 1.5em 5em;
-    }
+  body {
+    margin: 1.5em 5em;
+  }
 
-    .title {
-        font-size: 2.4rem;
-        font-weight: bold;
-        padding: 0;
-        margin: 0;
-    }
-    
-    .menu-svg {
-        display: none;
-    }
+  .title {
+    font-size: 2.4rem;
+    font-weight: bold;
+    padding: 0;
+    margin: 0;
+  }
 
-    nav {
-        transform: translateX(0);
-        position: unset;
-        display: block;
-        width: auto;
-        height: auto;
-        background: none;
-    }
-    
-    .close-svg {
-        display: none;
-    }
+  .menu-svg {
+    display: none;
+  }
 
-    .nav-container {
-        display: flex;
-        margin: 0;
-    }
-    
-    .nav-item {
-        font-size: 1.32rem;
-        padding: 0.6em 1em;
-    }
+  nav {
+    transform: translateX(0);
+    position: unset;
+    display: block;
+    width: auto;
+    height: auto;
+    background: none;
+  }
 
-    .nav-item:hover{
-        background: none;
-        color: inherit;
-        transition: none;
-        text-decoration: underline;
-    }
+  .close-svg {
+    display: none;
+  }
 
-    /* INFO */
+  .nav-container {
+    display: flex;
+    margin: 0;
+  }
 
-    .info-wrapper {
-        height: fit-content;
-        width: 50vw;
-        margin: 2em 0 4em 0;
-        font-size: 1.1rem;
-    }
+  .nav-item {
+    font-size: 1.32rem;
+    padding: 0.6em 1em;
+  }
 
-    /* SECTIONS */
+  .nav-item:hover {
+    background: none;
+    color: inherit;
+    transition: none;
+    text-decoration: underline;
+  }
 
-    .section-name {
-        font-size: 2rem;
-        margin-bottom: 0.75em;
-    }
+  /* INFO */
 
-    /* WORK */
+  .info-wrapper {
+    height: fit-content;
+    width: 50vw;
+    margin: 2em 0 4em 0;
+    font-size: 1.1rem;
+  }
 
-    .work-group {
-        margin-bottom: 3.3em;
-    }
+  /* SECTIONS */
 
-    .work-container {
-        margin: 1.5em 0 2em 0;
-    }
+  .section-name {
+    font-size: 2rem;
+    margin-bottom: 0.75em;
+  }
 
-    .work-name {
-        font-size: 1.5rem;
-        margin-top: 1em;
-    }
-    
-    .work-description {
-        font-size: 1.15rem;
-        margin: 0.5em 0 1em 0;
-    }
-    
-    .work-link {
-        font-size: 1.15rem;
-    }
+  /* WORK */
 
-    /* CONTACT */
+  .work-group {
+    margin-bottom: 3.3em;
+  }
 
-    .mail-button{
-        font-size: 1.24rem;
-        margin: 2em 0 1.4em 0;
-        height: 1.7em;
-        align-items: center; /* ? */
-    }
+  .work-container {
+    margin: 1.5em 0 2em 0;
+  }
 
-    .mail-button:active {
-        margin-bottom: 1.6em;
-        width: 13.1em;
-        height: 1.3em;
-    }
+  .work-name {
+    font-size: 1.5rem;
+    margin-top: 1em;
+  }
 
-    .resume {
-        font-size: 1.15rem;
-    }
-    
+  .work-description {
+    font-size: 1.15rem;
+    margin: 0.5em 0 1em 0;
+  }
+
+  .work-link {
+    font-size: 1.15rem;
+  }
+
+  /* CONTACT */
+
+  .mail-button {
+    font-size: 1.24rem;
+    margin: 2em 0 1.4em 0;
+    height: 1.7em;
+    align-items: center; /* ? */
+  }
+
+  .mail-button:active {
+    margin-bottom: 1.6em;
+    width: 13.1em;
+    height: 1.3em;
+  }
+
+  .resume {
+    font-size: 1.15rem;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
-    
-    body {
-        margin: 1.5em 16em;
-    }
+  body {
+    margin: 1.5em 16em;
+  }
 
-    .info-wrapper {
-        height: fit-content;
-        width: 25vw;
-        margin: 2em 0 4em 0;
-        font-size: 1.1rem;
-    }
+  .info-wrapper {
+    height: fit-content;
+    width: 25vw;
+    margin: 2em 0 4em 0;
+    font-size: 1.1rem;
+  }
 
-    .work-container {
-        width: 27vw;
-        margin: 1.5em 0 2em 0;
-    }
-
+  .work-container {
+    width: 27vw;
+    margin: 1.5em 0 2em 0;
+  }
 }
