--- a/style.css
+++ b/style.css
@@ -127,6 +127,10 @@ nav {
 
 /* WORK */
 
+.work-body {
+  margin: 0 0 1em;
+}
+
 .work-group {
   display: grid;
   grid-template-columns: 1fr;
@@ -137,14 +141,54 @@ nav {
   padding: 0;
 }
 
+.long-img {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-top: 56.25%; /* 16:9 aspect ratio */
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.long-img.expanded {
+  padding-top: 0;
+  height: auto;
+}
+
+.long-img img {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -28.3%);
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  transition: all 0.3s ease;
+}
+
+.long-img.expanded img {
+  position: relative;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: none;
+  transform: translate(-50%, 0%);
+  transition: all 0.3s ease;
+}
+
 .work-container {
   width: 90%;
+  position: relative;
+  width: auto;
+  height: auto;
+  overflow: hidden;
 }
 
 .work-shot {
   width: 100%;
-  /* aspect-ratio: 16/9; /* placeholder
-  outline: 1px white solid; /* for viz purposes */
+  /* object-fit: cover; */
+  /* aspect-ratio: 16/9; */
+  /*   outline: 1px white solid; /* for viz purposes */
 }
 
 .work-name {
@@ -383,10 +427,10 @@ nav {
     margin: 0;
   }
 
-  .work-container:last-of-type {
+  /* .work-container:last-of-type {
     width: 45vw;
     grid-area: 2 / 1 / 3 / 3;
-  }
+  } */
 
   .work-name {
     font-size: 1.5rem;
@@ -446,8 +490,8 @@ nav {
     margin: 0;
   }
 
-  .work-container:last-of-type {
+  /* .work-container:last-of-type {
     width: 40vw;
     grid-area: 2 / 1 / 3 / 3;
-  }
+  } */
 }
